Code review fixes: constants, Javadoc, private visibility, redundant UPDATE
- Delete orphaned Javadoc block above validateExecutorConfig()
- Make logProgress() private, remove its unit test
- Only generate UPDATE for affected indexes in updatePendingColumnName()
- Add constants for all column names in DeferredIndexChangeServiceImpl
- Use LOG_ARROW constant in rename log messages
- Fix DeferredAddIndex.apply(): Arrays.asList(new Index[]{}) → List.of()
- Update stale Javadoc in DeferredIndexServiceImpl and ReadinessCheckImpl
- Break long line in sleepForBackoff()
- Remove unnecessary throws Exception from test method

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>